Bug 42773 - Fix the last tree HTML5 tree builder crashes
Summary: Fix the last tree HTML5 tree builder crashes
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Other OS X 10.5
: P2 Normal
Assignee: Adam Barth
URL:
Keywords:
Depends on:
Blocks: 41123
  Show dependency treegraph
 
Reported: 2010-07-21 12:24 PDT by Adam Barth
Modified: 2010-07-21 13:23 PDT (History)
2 users (show)

See Also:


Attachments
Patch (6.65 KB, patch)
2010-07-21 12:27 PDT, Adam Barth
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Barth 2010-07-21 12:24:36 PDT
Fix the last tree HTML5 tree builder crashes
Comment 1 Adam Barth 2010-07-21 12:27:28 PDT
Created attachment 62218 [details]
Patch
Comment 2 Eric Seidel (no email) 2010-07-21 12:29:35 PDT
Comment on attachment 62218 [details]
Patch

What a gorgeous patch!  If I'm crying, it's tears of joy, good sir.
Comment 3 WebKit Commit Bot 2010-07-21 13:23:51 PDT
Comment on attachment 62218 [details]
Patch

Clearing flags on attachment: 62218

Committed r63851: <http://trac.webkit.org/changeset/63851>
Comment 4 WebKit Commit Bot 2010-07-21 13:23:56 PDT
All reviewed patches have been landed.  Closing bug.